--- a/launcher/release.html
+++ b/launcher/release.html
@@ -22,6 +22,7 @@
             margin: 0;
             height: 100%;
         }
+
         html {
             -ms-touch-action: none; /* Direct all pointer events to JavaScript code. */
         }
@@ -32,26 +33,11 @@
      id="gameDiv">
     <canvas id="gameCanvas" width="480" height="800" style="background-color: #000000"></canvas>
 </div>
-<script>
-
-
-    window.onerror = function(){
-
-        alert (arguments[0] + arguments[1] + arguments[2])
-    }
-
-</script>
 <script>var document_class = "GameApp";</script><!--这部分内容在编译时会被替换，要修改文档类，请到工程目录下的egretProperties.json内编辑。-->
-<script src="bin/WeixinAPI.js" async="false"></script>
-<script src="bin-debug/lib/egret_file_list.js"></script>
 <script src="launcher/egret_loader.js"></script>
-<script src="bin-debug/src/game_file_list.js"></script>
-
-
+<script src="launcher/game-min.js"></script>
 <script>
-    egret_h5.preloadScript(egret_file_list, "bin-debug/lib/");
-    egret_h5.preloadScript(game_file_list, "bin-debug/src/");
-    egret_h5.startLoading();
+    egret_h5.startGame();
 </script>
 </body>
 </html>
